--- a/package.yaml
+++ b/package.yaml
@@ -26,6 +26,9 @@ library:
   source-dirs: src
   dependencies:
     - servant-server
+    - servant-client
+    - http-client
+    - http-client-tls
     - aeson
     - text
 
